# cs

./: .gitignore
.СР-1/: result.txt  sol  sol.cpp
0. Введение/: README.md
1. Переменные/: README.md
3. Циклы/: README.md  in.txt  out.txt  out_expected.txt  test.sh  train_colution.cpp
4. Строки/: README.md
5. Массивы/: README.md
6. Двумерные массивы/: README.md
7. Битовые операции/: README.md
8. Сортировки/: bubble_sort.cpp
A. Файлы/: input.txt
B. Функции/: task2.cpp  task3
C. Рекурсия/: README.md
Doxygen/: Doxyfile  header.h  main  main.cpp
E. Vector/: 1.cpp  2  README.md
F. Структуры/: README.md  e2.csv  elements.cpp
GPT/: main.cpp  main2.cpp  my_gpt.hpp
Map/: README.md  config.ini  translations.txt
Qt/: Readme.md
Set/: README.md
Vector/: 2.cpp  README.md  vector.md
Асимптотика/: README.md  complexity.md
Библиотеки/: README.md  test.cpp
Библиотеки/Обращение в сеть/: CMakeLists.txt
Введение/: README.md
Заготовки, функции, прикольчики/: README.md
Задачи/: README.md
Подготовка к КР 4/: README.md  bits.cpp
Разборы/КР 2/: a  (+7 more)
Рекурсия/: README.md
СР-1/: README.md  name.txt  patronymic.txt  surname.txt
Создание проекта/: README.md  constants.h  game  game.cpp  game.h  main.cpp
Сортировки/: README.md
Стиль кодирования/: README.md
Структуры/: README.md  cities.txt  depatrutes.cpp  pipboy.cpp
Указатели/: README.md
Условия/: README.md
Файлы/: README.md  files.cpp  text_fish.txt
Форматированный вывод/: README.md  test  test.cpp
Функции/: README.md  task1  task1.cpp  task2  task2.cpp  task3.cpp  test  test.cpp
(+42 files in other folders)
